Added timeline to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900" ></canvas>
     <a href="wiki/.vuepress/dist/docs/index.html">WIKI</a>
     <a href="comic/test.html">COMIC</a>
+    <a href="docs/Vekllei Timeline.pdf">TIMELINE</a>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Sagittis eu volutpat odio facilisis mauris sit amet massa. Etiam dignissim diam quis enim. Odio pellentesque diam volutpat commodo sed egestas egestas. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Ante in nibh mauris cursus. Nisl nunc mi ipsum faucibus. Faucibus scelerisque eleifend donec pretium vulputate sapien. Placerat duis ultricies lacus sed. Leo urna molestie at elementum eu facilisis sed. Suspendisse ultrices gravida dictum fusce.
     </p>
