--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img id="tzipora" class="asset" src="static/Tzipora.png" />
     </div>
     <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900" ></canvas>
-    <a href="wiki/.vuepress/dist/docs/index.html">WIKI</a>
+    <a href="wiki/index.html">WIKI</a>
     <a href="comic/test.html">COMIC</a>
     <a href="docs/Vekllei Timeline.pdf">TIMELINE</a>
     <p>
