--- a/timeline/index.html
+++ b/timeline/index.html
@@ -1,3 +1,10 @@
+<html>
+  <head>
+    <title>Timeline</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+<body>
+
 <div class="fullwidth">
 
   <div class="timeline group">
@@ -65,3 +72,7 @@
   </div>
 
 </div>
+
+</body>
+
+</html>
