--- a/timeline/index.html
+++ b/timeline/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Bitcoin timeline with fixed header using flexbox</title>
+  <title>Timeline</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 
 </head>
@@ -32,7 +32,7 @@
             <ul>
               <li>Satoshi Nakamoto began working on the Bitcoin concept.</li>
             </ul>
-          </section>     
+          </section>
         </section>
         <section class="year">
           <h3>2008</h3>
