Minor css update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="main-content">
       <h1>
-         Welcome to the website of Studio MillMint<small>Click on a book to explore</small></h1>
+         Welcome to the world of Studio MillMint<small>Click on a book to explore</small></h1>
       <div class="moleskine-wrapper"><a style="text-decoration:none" href="wiki/index.html">
         <div class="moleskine-notebook">
           <div class="notebook-cover">
