--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+     .img-container {
+       text-align: center;
+     }
+   </style>
 </head>
 
 <body>
@@ -22,7 +27,9 @@
         <img id="tzipora" class="asset" src="static/Tzipora.png" />
     </div>
     <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900" ></canvas>
-
+    <div class="img-container"> <!-- Block parent element -->
+          <img src="user.png" alt="John Doe">
+        </div>
     <div class="main-content">
       <h1>
          Welcome to the world of Studio MillMint<small>Click on a book to explore</small></h1>
