--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <canvas id="HeaderCanvas" class="edge-to-edge hug-top" width="1000" height="900" ></canvas>
     <div class="img-container"> <!-- Block parent element -->
-          <img src="images/princess.jpg">
+          <img src="images/Princess.jpg">
         </div>
     <div class="main-content">
       <h1>
