--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
           <ul id="top-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="https://zelda.wiki">Home/家</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
-    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="https://millmint.studio/category/character/">Timeline/年表</a></li>
-    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="https://millmint.studio/category/landscape/">Comic/漫画</a></li>
+    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表</a></li>
+    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
     </ul>					<span class="menu_mark_circle hidden_mark_circle"></span>
         </div>
 
@@ -206,8 +206,8 @@
     <ul id="top-menu" class="navbar"><li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="https://zelda.wiki">Home/家</a></li>
       <li id="menu-item-702" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
       <li id="menu-item-523" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
-      <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="https://millmint.studio/category/character/">Timeline/年表</a></li>
-      <li id="menu-item-525" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="https://millmint.studio/category/Comic/漫画/">Comic/漫画</a></li>
+      <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表</a></li>
+      <li id="menu-item-525" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
     </ul>
     <span class="menu_mark_circle hidden_mark_circle"></span>
   </div>
@@ -277,8 +277,8 @@
     						<ul id="mobile-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="https://zelda.wiki">Home/家</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
-    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="https://millmint.studio/category/Timeline/年表/">Timeline/年表/人物</a></li>
-    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="https://millmint.studio/category/Comic/漫画/">Comic/漫画</a></li>
+    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表/人物</a></li>
+    <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
     </ul>					</div>
     			</div> <!-- end .top_header_items_holder -->
 
