--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
      .pic {
+       margin-left: 25%;
        text-align: center;
        alignment: center;
        width: 100%;
