--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
      .pic {
-       margin-left: 25%;
+       margin-left: 22%;
+       margin-right: 22%;
        text-align: center;
        alignment: center;
        width: 100%;
