Fixed pic margin

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
      .pic {
-       margin-left: 22%;
-       margin-right: 22%;
+       margin: 22% auto;
        text-align: center;
        alignment: center;
        width: 100%;
