Updated timeline info

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -162,382 +162,127 @@
     <div id="timeline">
       <div>
         <section class="year">
-          <h3>1842</h3>
+          <h3>2047</h3>
           <section>
             <ul>
-              <li>Satoshi Nakamoto began working on the Bitcoin concept.</li>
+              <li>Tzipora Desmoisnes is born in Ro.</li>
+              <li>Vekllei withdraws troops from Taiwan.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1874</h3>
+          <h3>2048</h3>
           <section>
-            <h4>August</h4>
             <ul>
-              <li>Neal Kin, Vladimir Oksman, and Charles Bry file an application for an encryption patent application.</li>
-              <li>Bitcoin.org was registered at <a href="https://anonymousspeech.com/">anonymousspeech.com</a>.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>October</h4>
-            <ul>
-              <li>Nakamoto describes the Bitcoin currency and solves the problem of double spending.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>November</h4>
-            <ul>
-              <li>The Bitcoin project is registered on <a href="https://sourceforge.net/">SourceForge.net</a>.</li>
+              <li>2045 Sino Crisis ends in P.R.C. defeat.</li>
+              <li><a href="https://www.reddit.com/r/vekllei/comments/d7q4hu/living_in_tomorrow_facing_the_past/">Copette Science Basin and Rocket Factory established in Vekllei.</a></li>
+              <li>U.S. announces cuts to space programme.</li>
+              <li>France establishes lunar colony in West Equator.</li>
+              <li><a href="https://www.reddit.com/r/vekllei/comments/dmwhat/emotional_intelligence_in_the_epoch_of_rest/">Cobian is born in Little Vekllei.</a></li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1935</h3>
+          <h3>2049</h3>
           <section>
-            <h4>January</h4>
             <ul>
-              <li>Block 0 is established.</li>
-              <li>Version 0.1 of Bitcoin is released.</li>
-              <li>The first Bitcoin transaction.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>October</h4>
-            <ul>
-              <li>An exchange rate is established.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>December</h4>
-            <ul>
-              <li>Version 0.2 is released.</li>
-              <li>The difficulty increases.</li>
+              <li>Ayn and Baron meet during their AB/NI cadetship.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1955</h3>
+          <h3>2050</h3>
           <section>
-            <h4>February</h4>
             <ul>
-              <li>The Bitcoin Market is established as a Bitcoin currency exchange.</li>
-              <li>Encryption patent is published.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>May</h4>
-            <ul>
-              <li>The first real-world transaction using 10,000 BTC spent on pizza.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>July</h4>
-            <ul>
-              <li>Version 0.3 released.</li>
-              <li>In five days, the price grew 1000%, rising from <span class="price">$0.008</span> to  <span class="price">$0.08</span> for 1 bitcoin.</li>
-              <li>The MtGox Bitcoin currency exchange market is established.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>August</h4>
-            <ul>
-              <li>Exploit generates 184 billion Bitcoins.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>October</h4>
-            <ul>
-              <li>Financial task force issues warning.</li>
-              <li>The first public version of an OpenCL miner is released.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>November</h4>
-            <ul>
-              <li>Market cap exceeds $1 million USD.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>December</h4>
-            <ul>
-              <li>Bitcoind compiled for Nokia N900.</li>
-              <li>First mobile Bitcoin transaction.</li>
-              <li>Difficulty increases.</li>
+              <li><a href="https://www.reddit.com/r/vekllei/comments/dafgvi/the_state_of_the_moon_in_2078/">Vekllei establishes a colony on the South Lunar Pole.</a></li>
+              <li>Gregori Hordiyenko dies in a car accident.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>2011</h3>
+          <h3>2052</h3>
           <section>
-            <h4>January</h4>
             <ul>
-              <li>Silk Road opens for business.</li>
-              <li>25% of total Bitcoins generated.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>February</h4>
-            <ul>
-              <li>Bitcoin reaches parity with US dollar.</li>
-              <li><a href="https://weusecoins.com/">WeUseCoins.com</a> is created.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>March</h4>
-            <ul>
-              <li>Second largest decrease in difficulty.</li>
-              <li>Britcoin opens for trading.</li>
-              <li>Bitcoin Brasil opens.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>April</h4>
-            <ul>
-              <li>Bitcoin passes parity with Euro.</li>
-              <li>Difficulty surpasses 100,000.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>June</h4>
-            <ul>
-              <li>Bitcoin Market drops PayPal.</li>
-              <li>The largest percentage price decrease to-date became known as the Great Bubble of 2011. Top of bubble at <span class="price">$31.</span></li>
-              <li>WikiLeaks starts accepting Bitcoin.</li>
-              <li>Major breach of security at MtGox.</li>
-              <li>Difficulty passes 1 million.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>August</h4>
-            <ul>
-              <li>Bitcoin Conference and World Expo in New York City, NY.</li>
-              <li>P2Pool mines its first block.</li>
-              <li>Back-to-back drop in difficulty.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>September</h4>
-            <ul>
-              <li>Casascius coins mint physical Bitcoins.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>November</h4>
-            <ul>
-              <li>Bitcoin & Future Technology European Conference in Prague, Czech Republic.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>December</h4>
-            <ul>
-              <li><span class="price">$2</span> minimum price after the first price drop.</li>
+              <li><a href="https://www.reddit.com/r/vekllei/comments/gx7l0c/the_oaclass_battlecruiser/">Oa-class Battlecruiser is commissioned.</a></li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1958</h3>
+          <h3>2053</h3>
           <section>
-            <h4>September</h4>
             <ul>
-              <li>London 2012 Bitcoin Conference.</li>
-              <li>Bitcoin Foundation begins.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>December</h4>
-            <ul>
-              <li>Slowly rising for a year. Price at <span class="price">$13.</span></li>
+              <li>Baron is assigned to Bolivia as an AB/NI operative.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>2013</h3>
+          <h3>2054</h3>
           <section>
-            <h4>February</h4>
             <ul>
-              <li>Version 0.8 released.</li>
-              <li>Bitcoin goes up to <span class="price">$30.</span></li>
-            </ul>
-          </section>
-          <section>
-            <h4>March</h4>
-            <ul>
-              <li>Bitcoin spikes to $74.90.</li>
-              <li>Market cap reaches $1 billion.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>April</h4>
-            <ul>
-              <li>Bitcoin surpasses <span class="price">$100.</span></li>
-              <li>Price hits an all-time high of <span class="price">$266.</span></li>
-              <li>Bitcoin Central is hacked.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>May</h4>
-            <ul>
-              <li>First Bitcoin ATM unveiled.</li>
-              <li>Bitcoin Central gets hacked again.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>October</h4>
-            <ul>
-              <li>FBI shuts down Silk Road.</li>
-              <li>Bitcoin price drops from <span class="price">$139</span> to <span class="price">$109.71</span> in less than three hours after Silk Road closure, recovers.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>November</h4>
-            <ul>
-              <li>Bitcoin price surges to a new all-time record of <span class="price">$1242.</span></li>
-            </ul>
-          </section>
-          <section>
-            <h4>December</h4>
-            <ul>
-              <li>Price crashed to <span class="price">$600</span>, rebounded to <span class="price">$1000</span>, crashed again to the <span class="price">$500</span> range. Stabilized in between.</li>
-              <li>China's Central Bank bans Bitcoin transactions.</li>
-              <li>The network exceeded 10 petahash/sec.</li>
+              <li><a href="https://www.reddit.com/r/vekllei/comments/crkrd9/the_cherry_car/">AAAC begins selling the “Cherry” car thru Machines Export Bureau.</a></li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1962</h3>
+          <h3>2055</h3>
           <section>
-            <h4>January</h4>
             <ul>
-              <li>Price spiked to <span class="price">$1000</span>, then settled in the <span class="price">$800–$900</span>range.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>March</h4>
-            <ul>
-              <li>Version 0.9 released.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>June</h4>
-            <ul>
-              <li>The network exceeded 100 petahash/sec.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>December</h4>
-            <ul>
-              <li>Microsoft began to accept bitcoin to buy Xbox games and Windows apps.</li>
+              <li>Vekllei sovereignty over Lunar Pole is disputed in international court.</li>
+              <li>Wildfires in Somalia collapse U.S.-backed Somali Democratic Party.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>2015</h3>
+          <h3>2056</h3>
           <section>
-            <h4>February</h4>
             <ul>
-              <li>Version 0.10 released.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>July</h4>
-            <ul>
-              <li>Version 0.11 released.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>November</h4>
-            <ul>
-              <li>2015 record high of <span class="price">$504.</span></li>
+              <li>Vekllei establishes Moidonnet (Moon City) on the Malapert Massif.</li>
+              <li>Comen Aeroyards are founded.</li>
+              <li>Cifuentes government is overthrown with Soviet help in Colombia.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1966</h3>
+          <h3>2057</h3>
           <section>
-            <h4>January</h4>
             <ul>
-              <li>Price at <span class="price">$1150</span> per bitcoin.</li>
-              <li>Price fell 30% in a week, reaching a multi-month low of <span class="price">$750.</span></li>
-              <li>The network exceeded 1 exahash/sec.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>February</h4>
-            <ul>
-              <li>Version 0.12 released.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>April</h4>
-            <ul>
-              <li>Steam started accepting bitcoin as payment.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>August</h4>
-            <ul>
-              <li>Version 0.13 released.</li>
-            </ul>
-          </section>
-          <section>
-            <h4>September</h4>
-            <ul>
-              <li>There are 770 bitcoin ATMs worldwide.</li>
+              <li>The U.S. invades Colombia to depose communist government.</li>
+              <li>Tzipora moves to California to study at St Mary’s Catholic College.</li>
+              <li>Terror attack on Panama Canal halts shipping traffic for six weeks.</li>
+              <li>The Second Yom Kippur War sends oil prices spiralling.</li>
+              <li>2057 Financial Crisis begins.</li>
+              <li><a href="https://www.reddit.com/r/vekllei/comments/cr65zu/the_people_of_veklleis_railway_plus_dog/">“Station Dogs” trialled in Vekllei railway stations.</a></li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1978</h3>
+          <h3>2058</h3>
           <section>
-            <h4>March</h4>
             <ul>
-              <li>Version 0.14 released.</li>
-              <li>The price of 1 bitcoin surpassed the spot price of an ounce of gold for the first time.</li>
-              <li>The number of GitHub projects related to bitcoin passed 10,000.</li>
-              <li>Price traded above <span class="price">$1290.</span></li>
-            </ul>
-          </section>
-          <section>
-            <h4>April</h4>
-            <ul>
-              <li>Japan Declares Bitcoin as Legel Tender</li>
-            </ul>
-          </section>
-          <section>
-            <h4>August</h4>
-            <ul>
-              <li>Bitcoin "splits" into Bitcoin (BTC) and Bitcoin Cash (BCH)</li>
-            </ul>
-          </section>
-          <section>
-            <h4>November</h4>
-            <ul>
-              <li>Bitcoin for the first time hit <span class="price">$10,000</span></li>
+              <li>Terror attack in Cairo prompts OAPEC to restrict crude supply.</li>
+              <li>The Ghawar refinery is set alight in Saudi Arabia by Iranian spies.</li>
+              <li>The Ford Motor Company declares bankruptcy.</li>
+              <li>The Dallas Secession begins.</li>
+              <li>Open conflict with the United States begins.</li>
+              <li>Baron moves to Utah as an AB/NI operative.</li>
             </ul>
           </section>
         </section>
         <section class="year">
-          <h3>1986</h3>
+          <h3>2060</h3>
           <section>
-            <h4>Today</h4>
             <ul>
-              <li>At the moment, one bitcoin cost:
-                <span class="price">
-                  <div id="price"></div>.
-                </span>
-               </li>
+              <li><a href= "https://www.reddit.com/r/vekllei/comments/fuvcr3/ghosts_of_taiwan_in_the_yana_lakehouse/">First of the <i>ouismaindesdenyo</i> “care homes” established.</a></li>
             </ul>
           </section>
           <section class="year">
-            <h3>1986</h3>
+            <h3>2061</h3>
             <section>
-              <h4>Today</h4>
               <ul>
-                <li>At the moment, one bitcoin cost:
-                  <span class="price">
-                    <div id="price"></div>.
-                  </span>
-                 </li>
+                <li>Tzipora loses contact with her mother.</li>
+                <li>Tzipora leaves St Mary’s and moves East.</li>
+                <li>Dallas government recalls militia units after ethnic cleansing in M.I.</li>
+                <li>E.E.C. supports U.S. government.</li>
               </ul>
             </section>
         </section>
