--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
 
               <div class="main_menu">
-          <ul id="top-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="https://zelda.wiki">Home/家</a></li>
+          <ul id="top-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="index.html">Home/家</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表</a></li>
@@ -204,7 +204,7 @@
 
 
   <div class="main_menu">
-    <ul id="top-menu" class="navbar"><li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="https://zelda.wiki">Home/家</a></li>
+    <ul id="top-menu" class="navbar"><li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="index.html">Home/家</a></li>
       <li id="menu-item-702" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
       <li id="menu-item-523" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
       <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表</a></li>
@@ -275,7 +275,7 @@
 
     						<div class="top_header_items_holder mobile_menu_opened">
     					<div class="main_menu">
-    						<ul id="mobile-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="https://zelda.wiki">Home/家</a></li>
+    						<ul id="mobile-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="index.html">Home/家</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表/人物</a></li>
