--- a/index.html
+++ b/index.html
@@ -159,12 +159,14 @@
 
 
               <div class="main_menu">
-          <ul id="top-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="index.html">Home/家</a></li>
+          <ul id="top-menu" class="navbar">
+    <li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active"><a href="index.html">Home/家</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
-    </ul>					<span class="menu_mark_circle hidden_mark_circle"></span>
+    </ul>
+    <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
         </div>
 
       <!-- Place header control after main menu if site title is enabled -->
@@ -204,13 +206,14 @@
 
 
   <div class="main_menu">
-    <ul id="top-menu" class="navbar"><li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="index.html">Home/家</a></li>
+    <ul id="top-menu" class="navbar">
+      <li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active"><a href="index.html">Home/家</a></li>
       <li id="menu-item-702" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
       <li id="menu-item-523" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
       <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表</a></li>
       <li id="menu-item-525" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
     </ul>
-    <span class="menu_mark_circle hidden_mark_circle"></span>
+    <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
   </div>
 
     			<!-- Place header control after main menu if site title is enabled -->
@@ -275,7 +278,8 @@
 
     						<div class="top_header_items_holder mobile_menu_opened">
     					<div class="main_menu">
-    						<ul id="mobile-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="index.html">Home/家</a></li>
+    						<ul id="mobile-menu" class="navbar">
+    <li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active"><a href="index.html">Home/家</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
     <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a href="timeline/index.html">Timeline/年表/人物</a></li>
