Uploaded high-res photos

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                   <img src="images/princess.jpg" width="50%" height="50%">
             </div>
     				<div class="row post_width_sidebar_row">
+              <h1 class="entry-title title post_title section_title">Introduction to the Petticoat Project</h1>
     		<div class="col8 sidebar_post_content_col">
     			<div class="row grid_list grid_list_2_col">
     			<div class="grid_col col6">
