Fixed navbar links

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -137,10 +137,10 @@
 
           <div class="main_menu">
       <ul id="top-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="../index.html">Home/家</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
-<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
-<li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a href="index.">Timeline/年表</a></li>
-<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="../intro/index.html">Intro/序</a></li>
+<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="../wiki/index.html">Wiki/ウィキ</a></li>
+<li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a href="index.html">Timeline/年表</a></li>
+<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="../comic/index.html">Comic/漫画</a></li>
 </ul>					<span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
     </div>
 
@@ -322,10 +322,10 @@
 
     <div class="main_menu">
       <ul id="top-menu" class="navbar"><li id="menu-item-585" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="../index.html">Home/家</a></li>
-        <li id="menu-item-702" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
-        <li id="menu-item-523" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
-        <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a href="index.">Timeline/年表</a></li>
-        <li id="menu-item-525" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
+        <li id="menu-item-702" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="../intro/index.htmls">Intro/序</a></li>
+        <li id="menu-item-523" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="../wiki/index.html">Wiki/ウィキ</a></li>
+        <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a href="index.html">Timeline/年表</a></li>
+        <li id="menu-item-525" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="../comic/index.html">Comic/漫画</a></li>
       </ul>
       <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 326.21875px;"></span>
     </div>
@@ -345,10 +345,10 @@
       						<div class="top_header_items_holder mobile_menu_opened">
       					<div class="main_menu">
       						<ul id="mobile-menu" class="navbar"><li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu"><a href="../index.html">Home/家</a></li>
-      <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="https://millmint.studio/introduction/">Intro/序</a></li>
-      <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="https://millmint.studio/category/author/">Wiki/ウィキ</a></li>
-      <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a href="index.">Timeline/年表</a></li>
-      <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="comic/test.html">Comic/漫画</a></li>
+      <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a href="../intro/index/html">Intro/序</a></li>
+      <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a href="../wiki/index/html">Wiki/ウィキ</a></li>
+      <li id="menu-item-524" class="menu-item menu-item-type-taxonomy menu-item-object-category current-menu-item menu-item-524 default_menu active"><a href="index.html">Timeline/年表</a></li>
+      <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a href="../comic/index.html">Comic/漫画</a></li>
       </ul>					</div>
       			</div> <!-- end .top_header_items_holder -->
 
