--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </style>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
+    
 </head>
 
 <body>
@@ -271,9 +272,10 @@
   <!-- falling engine -->
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <script src='js/AnimationEngine.js'></script>
   <script src='js/falling_animations.js'></script>
-
+  
 
 </body>
 </html>
