Updated front page with sitemap work

--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
       }
     </style>
 
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+    <link rel="stylesheet" href="./css/sitemap.css">
     <link rel='stylesheet' id='style-css'  href='theme/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='fonts-css'  href='theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' id='custom-css'  href='theme/assets/css/custom.css' type='text/css' media='all' />
     <style id='custom-inline-css' type='text/css'>body { font-family: 'Roboto', sans-serif; }h1, h2, h3, h4, h5, h6, .title, .text_logo, .comment-reply-title, .header_square_logo a.square_letter_logo {font-family: 'Poppins', sans-serif;}a { color: #ff374a; }
     </style>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery.js'></script>
     <script type='text/javascript' src='https://c0.wp.com/c/5.4.2/wp-includes/js/jquery/jquery-migrate.min.js'></script>
-    
+
 </head>
 
 <body>
@@ -50,16 +53,6 @@
   <!-- header -->
 
   <header class="site_header">
-
-    <div class="gray_header">
-      <div class="container site_header">
-        <div class="header_square_logo">
-
-          <a class="square_letter_logo" href="index.html" rel="home" title="STUDIO MILLMINT">S</a>
-
-        </div>
-      </div>
-    </div>
     <div class="header_nav_wrapper unsticky_header_nav_wrapper">
       <div class="header_nav">
         <div class="container">
@@ -161,12 +154,117 @@
 
       <main id="content" class="site-content">
         <section id="primary" class="container main_content_area blog_index_area gridsidebar_main_content_container">
+          <section class="window">
 
+            <h2 class="main thick">
+              <a href="index.html">STUDIO MILLMINT/スタジオミルミント</a></li></h3>
+            <ul class="row">
+              <li class="page stretch join up down">
+                <div class="thin">
+                  <h3>Home</h3>
+                  <ul class="content">
+                    <li>Hero carousel
+                      <ul class="section">
+                        <li>Dispatch</li>
+                        <li>Shopping</li>
+                        <li>Food Delivery</li>
+                        <li>Helper tasks</li>
+                      </ul>
+                    </li>
+                    <li>Partner logos</li>
+                    <li>How to use</li>
+                    <li>Why to use</li>
+                    <li>Showcase</li>
+                    <li>Become a GoGetter</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="page stretch join up down">
+                <div class="thin">
+                  <h3>Gateway</h3>
+                  <ul class="content">
+                    <li>Option to download native apps</li>
+                    <li>Log in</li>
+                    <li>Register</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="page stretch join up down">
+                <div class="thin">
+                  <h3>FAQ</h3>
+                </div>
+              </li>
+              <li class="page stretch join up down">
+                <div class="thin">
+                  <h3>Blog</h3>
+                </div>
+              </li>
+            </ul>
+            <h3 class="main thick">Footer Navigation
+              <ul class="thin">
+                <li>Contact Info</li>
+                <li>Copyright info</li>
+              </ul>
+            </h3>
+            <ul class="row">
+              <li class="page join down">
+                <div class="thin">
+                  <h3>GoGet for Business</h3>
+                  <ul class="content">
+                    <li>Option to download native apps</li>
+                    <li>Log in</li>
+                    <li>Register</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="page join down">
+                <div class="thin">
+                  <h3>Become a GoGetter</h3>
+                  <ul class="content">
+                    <li>Benefits of Gogetting</li>
+                    <li>Ground Rules</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="page join down">
+                <div class="thin">
+                  <h3>Sign Up Form</h3>
+                </div>
+              </li>
+              <li class="page join down">
+                <div class="thin">
+                  <h3>About GoGet</h3>
+                  <ul class="content">
+                    <li>About GoGet</li>
+                    <li>Our Community</li>
+                    <li>Our Values</li>
+                    <li>The Team</li>
+                    <li>Link to Vacanies</li>
+                  </ul>
+                </div>
+              </li>
+              <li class="page join down">
+                <div class="thin">
+                  <h3>Staff Vacancies</h3>
+                </div>
+              </li>
+              <li class="page join down">
+                <div class="thin">
+                  <h3>Terms of Service</h3>
+                </div>
+              </li>
+            </ul>
+          </section>
+
+          <!--
           <figure class="post_banner">
             <div class ="home">
               <img src="images/princess.jpg" width="50%" height="50%">
-          </div>
-            <!-- WIP
+          </div> -->
+
+          <!-- partial -->
+
+          <!-- WIP
             <div class="home-content">
               <h1> <i>Welcome to Studio MillMint</i> </h1>
               <h3> スタジオミルミントへようこ </h3>
@@ -261,21 +359,19 @@
     <!-- end sliding sidebar content -->
 
   </div>
-  <!-- pagination -->
-
-   <script type='text/javascript'
-     src='theme/assets/js/global.js'></script>
-
-   <script type='text/javascript'
-     src='theme/plugins/core/inc/core.js'></script>
 
   <!-- falling engine -->
+  <script type='text/javascript'
+    src='theme/assets/js/global.js'></script>
+  <script type='text/javascript'
+    src='theme/plugins/core/inc/core.js'></script>
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
   <script src='js/AnimationEngine.js'></script>
   <script src='js/falling_animations.js'></script>
-  
+  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+
 
 </body>
 </html>
